tests/reference/ast-integer16-eab0df9.stderr
syntax error: kind 16 is not supported yet.
 --> tests/errors/integer16.f90:2:2
  |
2 |  integer*16 x
  |  ^^^^^^^^^^ 
